syntax = "proto3";

package api.prom.strategy;

option go_package = "prometheus-manager/api/prom/strategy;strategy";
option java_multiple_files = true;
option java_package = "api.prom.strategy";

service Strategy {
	rpc CreateStrategy (CreateStrategyRequest) returns (CreateStrategyReply);
	rpc UpdateStrategy (UpdateStrategyRequest) returns (UpdateStrategyReply);
	rpc DeleteStrategy (DeleteStrategyRequest) returns (DeleteStrategyReply);
	rpc GetStrategy (GetStrategyRequest) returns (GetStrategyReply);
	rpc ListStrategy (ListStrategyRequest) returns (ListStrategyReply);
}

message CreateStrategyRequest {}
message CreateStrategyReply {}

message UpdateStrategyRequest {}
message UpdateStrategyReply {}

message DeleteStrategyRequest {}
message DeleteStrategyReply {}

message GetStrategyRequest {}
message GetStrategyReply {}

message ListStrategyRequest {}
message ListStrategyReply {}